--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	margin: 0 auto;
-	background-color: $badass;
+	// background-color: $badass;
 }
 
 code {
@@ -17,4 +17,8 @@ code {
 	width: 100%;
 	display: flex;
 	justify-content: center;
+}
+
+body {
+	background-color: darkred;
 }
