--- a/index.css
+++ b/index.css
@@ -1,16 +1,21 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  margin: 0 auto; }
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+		"Droid Sans", "Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	margin: 0 auto;
+}
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace; }
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
 
 #root {
-  width: 100%;
-  display: flex;
-  justify-content: center; }
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
 
 body {
-  background-color: darkred; }
+	/* background-color: darkred; */
+}
